--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,10 @@ repositories {
 }
 
 dependencies {
-	implementation 'io.jsonwebtoken:jjwt:0.9.1'
+	/**jwt */
+	implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.5'
+	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.5'
+	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.5'
 	implementation "com.h2database:h2"
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
